Libraries for PHP debugging

--- a/wiki/config/php.ini
+++ b/wiki/config/php.ini
@@ -1,2 +1,11 @@
 date.timezone = UTC
 short_open_tag = 0
+zend_extension = "/var/www/xdebug.so"
+
+[XDebug]
+
+xdebug.mode = debug
+xdebug.discover_client_host = 1
+xdebug.remote_enable = 1
+xdebug.remote_host = localhost
+xdebug.remote_port = 9003
